registration login and logout completed

--- a/QITInterReg/Views/User/Registration.cshtml
+++ b/QITInterReg/Views/User/Registration.cshtml
@@ -80,7 +80,7 @@ else
                 </div>
             </div>
         </div>
-        if (ViewBag.Message != null)
+        if (ViewBag.message != null)
         {
             <div class="alert alert-danger">
                 <strong>Error!</strong>@ViewBag.message
