--- a/QITInterReg/Views/User/Login.cshtml
+++ b/QITInterReg/Views/User/Login.cshtml
@@ -6,13 +6,19 @@
 
 <h2>Login</h2>
 
+@if (ViewBag.message != null)
+    {
+<div class="alert alert-danger">
+    @ViewBag.message
+</div>
+    }
 
-@using (Html.BeginForm()) 
+@using (Html.BeginForm())
 {
     @Html.AntiForgeryToken()
-    
+
     <div class="form-horizontal">
-        
+
         <hr />
         @Html.ValidationSummary(true, "", new { @class = "text-danger" })
         <div class="form-group">
@@ -51,7 +57,7 @@
 }
 
 <div>
-    @Html.ActionLink("Register Now", "Registration","User")
+    @Html.ActionLink("Register Now", "Registration", "User")
 </div>
 
 @section Scripts {
